[package]
name = "infini-ccl"
version = "0.0.0"
edition = "2021"
authors = ["YdrMaster <ydrml@hotmail.com>"]

[dependencies]
infini-rt = { version = "0.0", path = "../infini-rt" }

[build-dependencies]
build-script-cfg = "0.0"
bindgen = "0.70"
search-infini-tools = { version = "0.0", path = "../search-infini-tools" }
